--- a/django_mises/locale/fi/LC_MESSAGES/django.po
+++ b/django_mises/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-03-12 22:45+0200\n"
+"POT-Creation-Date: 2011-04-17 20:37+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -149,3 +149,11 @@ msgstr "Kutsu mises.fihin"
 #: users/templates/login.html:25
 msgid "Log in"
 msgstr "Kirjaudu sisään"
+
+#: pagination
+msgid "next"
+msgstr "seuraava"
+
+msgid "previous"
+msgstr "edellinen"
+
