--- a/django_mises/locale/fi/LC_MESSAGES/django.po
+++ b/django_mises/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-04-17 20:37+0300\n"
+"POT-Creation-Date: 2011-04-17 23:28+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -145,6 +145,14 @@ msgstr "Käyttäjätunnus on jo viety"
 #: prelaunch/models.py:61
 msgid "Invitation to mises.fi"
 msgstr "Kutsu mises.fihin"
+
+#: users/forms.py:11
+msgid "Verification code"
+msgstr "Vahvistuskoodi"
+
+#: users/forms.py:15
+msgid "Invalid verification code"
+msgstr "Virheellinen vahvistuskoodi"
 
 #: users/templates/login.html:25
 msgid "Log in"
