Fix lookups in translation

--- a/django_mises/locale/fi/LC_MESSAGES/django.po
+++ b/django_mises/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-04-23 18:50+0300\n"
+"POT-Creation-Date: 2011-04-23 19:00+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
-#: email_helpers.py:28
+#: email_helpers.py:34
 #, fuzzy, python-format
 msgid "Verification code for %s"
 msgstr "Vahvistuskoodi sivustolle %s"
@@ -160,14 +160,14 @@ msgid "Invalid verification code"
 msgstr "Virheellinen vahvistuskoodi"
 
 #: users/templates/email/send_verification_code.txt:1
-#, python-format
+#, fuzzy, python-format
 msgid ""
 "Hi!\n"
 "\n"
-"Welcome to %(site.name)s! Here is your verification code for\n"
-"http://%(site.domain)s/user/%(user.username)s\n"
+"Welcome to %(site_name)s! Here is your verification code for\n"
+"http://%(site_domain)s/user/%(user_username)s\n"
 "\n"
-"If you didn't register with %(site.name)s please\n"
+"If you didn't register with %(site_name)s please\n"
 "ignore this message.\n"
 "\n"
 "-- \n"
@@ -175,10 +175,10 @@ msgid ""
 msgstr ""
 "Hei\n"
 "\n"
-"Tervetuloa sivustolle %(site.name)s! Tässä on vahvistuskoodisi sivulle\n"
-"http://%(site.domain)s/user/%(user.username)s\n"
+"Tervetuloa sivustolle %(site_name)s! Tässä on vahvistuskoodisi sivulle\n"
+"http://%(site_domain)s/user/%(user_username)s\n"
 "\n"
-"Jos et rekisteröitynyt sivustolle %(site.name)s ystävällisesti\n"
+"Jos et rekisteröitynyt sivustolle %(site_name)s ystävällisesti\n"
 "jätä tämä viesti huomioimatta.\n"
 "\n"
 "-- \n"
